USD import crashes if processing of Transform Cache requires status reports #114237

Closed
opened 2023-10-28 23:55:11 +02:00 by Jesse Yurkovich · 1 comment

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 528.24

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-27 00:53, hash: ce027579e02f
Worked: 4.0 betas are still fine

Caused by b684864561

Short description of error
During import of certain scenes with animations, like ALab by Animal Logic[1], USD creates some Transform Caches.
After import is complete the depsgraph will attempt to process these modifiers, which effectively means reading parts of the USD mesh again.

If reading requires using the report system during processing Blender will crash.

Exact steps for others to reproduce the error

  • Attempt to import a USD scene which contains custom attributes AND for which Transform Cache modifiers will be created[1]
  • The import is successful but Blender crashes soon after when attempting to report more warnings:
The `import_params_.worker_status` field is null...

blender.exe!blender::io::usd::USDMeshReader::read_custom_data(const blender::io::usd::ImportSettings * settings, Mesh * mesh, double motionSampleTime, bool new_mesh) Line 941	C++
blender.exe!blender::io::usd::USDMeshReader::read_mesh_sample(blender::io::usd::ImportSettings * settings, Mesh * mesh, double motionSampleTime, bool new_mesh) Line 885	C++
blender.exe!blender::io::usd::USDMeshReader::read_mesh(Mesh * existing_mesh, USDMeshReadParams params, const char * * __formal) Line 1119	C++
blender.exe!USD_read_mesh(CacheReader * reader, Object * ob, Mesh * existing_mesh, USDMeshReadParams params, const char * * err_str) Line 572	C++
blender.exe!modify_mesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * mesh) Line 259	C++
blender.exe!modifier_modify_mesh_and_geometry_set(ModifierData * md, const ModifierEvalContext & mectx, Mesh * input_mesh, blender::bke::GeometrySet & geometry_set) Line 490	C++
blender.exe!mesh_calc_modifiers(Depsgraph * depsgraph, const Scene * scene, Object * ob, const bool use_deform, const bool need_mapping, const CustomData_MeshMasks * dataMask, const bool use_cache, const bool allow_shared_mesh, Mesh * * r_deform, Mesh * * r_final, blender::bke::GeometrySet * * r_geometry_set) Line 839	C++

[1] https://dpel.aswf.io/alab/

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 528.24 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-27 00:53, hash: `ce027579e02f` Worked: 4.0 betas are still fine Caused by b68486456142d769cd05c2c9ef206259a0acd333 **Short description of error** During import of certain scenes with animations, like ALab by Animal Logic[1], USD creates some Transform Caches. After import is complete the depsgraph will attempt to process these modifiers, which effectively means reading parts of the USD mesh again. If reading requires using the report system during processing Blender will crash. **Exact steps for others to reproduce the error** - Attempt to import a USD scene which contains custom attributes AND for which Transform Cache modifiers will be created[1] - The import is successful but Blender crashes soon after when attempting to report more warnings: ``` The `import_params_.worker_status` field is null... blender.exe!blender::io::usd::USDMeshReader::read_custom_data(const blender::io::usd::ImportSettings * settings, Mesh * mesh, double motionSampleTime, bool new_mesh) Line 941 C++ blender.exe!blender::io::usd::USDMeshReader::read_mesh_sample(blender::io::usd::ImportSettings * settings, Mesh * mesh, double motionSampleTime, bool new_mesh) Line 885 C++ blender.exe!blender::io::usd::USDMeshReader::read_mesh(Mesh * existing_mesh, USDMeshReadParams params, const char * * __formal) Line 1119 C++ blender.exe!USD_read_mesh(CacheReader * reader, Object * ob, Mesh * existing_mesh, USDMeshReadParams params, const char * * err_str) Line 572 C++ blender.exe!modify_mesh(ModifierData * md, const ModifierEvalContext * ctx, Mesh * mesh) Line 259 C++ blender.exe!modifier_modify_mesh_and_geometry_set(ModifierData * md, const ModifierEvalContext & mectx, Mesh * input_mesh, blender::bke::GeometrySet & geometry_set) Line 490 C++ blender.exe!mesh_calc_modifiers(Depsgraph * depsgraph, const Scene * scene, Object * ob, const bool use_deform, const bool need_mapping, const CustomData_MeshMasks * dataMask, const bool use_cache, const bool allow_shared_mesh, Mesh * * r_deform, Mesh * * r_final, blender::bke::GeometrySet * * r_geometry_set) Line 839 C++ ``` [1] https://dpel.aswf.io/alab/
Jesse Yurkovich added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-28 23:55:12 +02:00
Jesse Yurkovich changed title from USD import crashes if to USD import crashes if processing of Transform Cache requires status reports 2023-10-28 23:55:39 +02:00
Member

Can confirm.

CC @mont29

Can confirm. CC @mont29
Philipp Oeser added this to the 4.1 milestone 2023-10-30 14:45:01 +01:00
Bastien Montagne self-assigned this 2023-10-30 15:17:02 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-02 12:45:40 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114237
No description provided.