source/blender/io/usd/intern/usd_reader_material.h
@@ -91,7 +91,7 @@ class USDMaterialReader {
   /** Get the wmJobWorkerStatus-provided `reports` list pointer, to use with the BKE_report API. */
   ReportList *reports() const
   {
-    return params_.worker_status->reports;
+    return params_.worker_status ? params_.worker_status->reports : nullptr;
   }
 
  protected:
