source/blender/io/usd/intern/usd_reader_prim.h
@@ -122,7 +122,7 @@ class USDPrimReader {
   /** Get the wmJobWorkerStatus-provided `reports` list pointer, to use with the BKE_report API. */
   ReportList *reports() const
   {
-    return import_params_.worker_status->reports;
+    return import_params_.worker_status ? import_params_.worker_status->reports : nullptr;
   }
 
   /* Since readers might be referenced through handles
