source/blender/io/usd/intern/usd_reader_stage.h
@@ -84,7 +84,7 @@ class USDStageReader {
   /** Get the wmJobWorkerStatus-provided `reports` list pointer, to use with the BKE_report API. */
   ReportList *reports() const
   {
-    return params_.worker_status->reports;
+    return params_.worker_status ? params_.worker_status->reports : nullptr;
   }
 
   void clear_readers();
